[package]
name = "ymc"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/yew-components"
repository = "https://github.com/angular-rust/yew-components"
documentation = "https://docs.rs/ymc"
description = "Materail Components for YEW"
keywords = ["wasm", "web", "material", "yew", "material-components"]
categories = ["wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
banner = []
button = []
barchart = ["ux-animate", "ux-dataflow", "ux-charts"]
card = []
charts = ["barchart", "gaugechart", "linechart", "piechart", "radarchart"]
checkbox = []
chips = []
circular-progress-four-color = []
circular-progress = []
data-table = []
dialog = []
drawer = []
fab = []
formfield = []
gaugechart = ["ux-animate", "ux-dataflow", "ux-charts"]
icon-button-toggle = []
icon-button = []
icon = []
image-list = []
linechart = ["ux-animate", "ux-dataflow", "ux-charts"]
linear-progress = []
list = []
menu = []
piechart = ["ux-animate", "ux-dataflow", "ux-charts"]
radarchart = ["ux-animate", "ux-dataflow", "ux-charts"]
radio = []
select = []
slider = []
snackbar = []
switch = []
tabs = []
textarea = []
textfield = []
tooltip = []
top-app-bar-fixed = []
top-app-bar = []
full = [
    "banner",
    "button",
    "card",
    "charts",
    "checkbox",
    "chips",
    "circular-progress-four-color",
    "circular-progress",
    "data-table",
    "dialog",
    "drawer",
    "fab",
    "formfield",
    "icon-button-toggle",
    "icon-button",
    "icon",
    "image-list",
    "linear-progress",
    "list",
    "menu",
    "radio",
    "select",
    "slider",
    "snackbar",
    "switch",
    "tabs",
    "textarea",
    "textfield",
    "tooltip",
    "top-app-bar-fixed",
    "top-app-bar",        
]
default = ["full"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.2"
js-sys = "0.3"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }
yew = "0.17"
yew-router = "0.14"

ux-dataflow = { version = "0.1", optional = true }
ux-animate = { version = "0.1", optional = true }
ux-charts = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
doc-comment = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "HtmlCanvasElement",
]
